--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php": ">=7.0.0",
     "skvn/base": "dev-master",
     "skvn/event": "dev-master",
+    "skvn/app": "dev-master",
     "twig/twig": "dev-master"
   },
   "autoload": {
